Added more perms, functions, packages.

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,169 +2,185 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## Smali & Manifest File Analysis\n",
     "\n",
     "This notebook will try to analyze a directory and its SMALI and MANIFEST files. The analysis will find and print sensitive methods and packages used by the program. "
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 1,
    "source": [
-    "from os import walk\n",
+    "from os import walk\r\n",
     "import pandas as pd"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 24,
    "source": [
-    "methods_to_find = []\n",
-    "perms_to_find = []\n",
-    "found_perms = []\n",
-    "found_lines = []\n",
-    "\n",
-    "#read file using pandas\n",
-    "df = pd.read_csv('functions.csv', engine='python')\n",
-    "methods_to_find = df.functions\n",
-    "df = pd.read_csv('perms.csv', engine='python')\n",
+    "methods_to_find = []\r\n",
+    "perms_to_find = []\r\n",
+    "found_perms = []\r\n",
+    "found_lines = []\r\n",
+    "\r\n",
+    "#read file using pandas\r\n",
+    "df = pd.read_csv('functions.csv', engine='python')\r\n",
+    "methods_to_find = df.functions\r\n",
+    "df = pd.read_csv('perms.csv', engine='python')\r\n",
     "perms_to_find   = df.perms"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 22,
    "source": [
-    "def findFunctionsInDir(dir, list=0, verbose = True):\n",
-    "    #for each directory, and files\n",
-    "    for dirpath, dirnames, files in walk(dir):\n",
-    "\n",
-    "        #skip the res folder, too many subfolders, slows.\n",
-    "        if('res' in dirpath): continue\n",
-    "\n",
-    "        if(verbose == True): print(f'Found directory: {dirpath}')\n",
-    "        for file_name in files:\n",
-    "\n",
-    "            #if it is a smali file\n",
-    "            if('.smali' in file_name):\n",
-    "                \n",
-    "                #print file name\n",
-    "                if(verbose == True): print(file_name)\n",
-    "\n",
-    "                #open file and print line number and contents\n",
-    "                with open(dirpath + \"\\\\\" + file_name) as myFile:\n",
-    "                    for num, line in enumerate(myFile, 1):\n",
-    "                        for i in methods_to_find:\n",
-    "                            if(i in line and 'invoke' in line):\n",
-    "                                #print the harmful line\n",
-    "                                if(line.strip() not in found_lines):\n",
-    "                                    if(verbose == True): print(num, \": \", line)\n",
-    "                                    found_lines.append(line.strip())\n",
-    "\n",
-    "            #if it is a manifest file\n",
-    "            if('.xml' in file_name and 'anifest' in file_name):\n",
-    "                \n",
-    "                #print file name\n",
-    "                if(verbose == True): print(file_name)\n",
-    "\n",
-    "                #open file and print line number and contents\n",
-    "                #I had to use latin encoding here or it would simply not work.\n",
-    "                with open(dirpath + \"\\\\\" + file_name, encoding=\"latin-1\") as myFile:\n",
-    "                    for num, line in enumerate(myFile, 1):\n",
-    "                        for i in perms_to_find:\n",
-    "                            if(i in line and ('<uses-permission android:name=' in line)\n",
-    "                                         or  ('<action android:name=\"android.app.action') in line):\n",
-    "                                #print the harmful line\n",
-    "                                if(line.strip() not in found_perms):\n",
-    "                                    if(verbose == True): print(num, \": \", line)\n",
+    "def findFunctionsInDir(dir, list=0, verbose = True):\r\n",
+    "    #for each directory, and files\r\n",
+    "    for dirpath, dirnames, files in walk(dir):\r\n",
+    "\r\n",
+    "        #skip the res folder, too many subfolders, slows.\r\n",
+    "        if('res' in dirpath): continue\r\n",
+    "\r\n",
+    "        if(verbose == True): print(f'Found directory: {dirpath}')\r\n",
+    "        for file_name in files:\r\n",
+    "\r\n",
+    "            #if it is a smali file\r\n",
+    "            if('.smali' in file_name):\r\n",
+    "                \r\n",
+    "                #print file name\r\n",
+    "                if(verbose == True): print(file_name)\r\n",
+    "\r\n",
+    "                #open file and print line number and contents\r\n",
+    "                with open(dirpath + \"\\\\\" + file_name) as myFile:\r\n",
+    "                    for num, line in enumerate(myFile, 1):\r\n",
+    "                        for i in methods_to_find:\r\n",
+    "                            if(i in line and 'invoke' in line):\r\n",
+    "                                #print the harmful line\r\n",
+    "                                if(line.strip() not in found_lines):\r\n",
+    "                                    if(verbose == True): print(num, \": \", line)\r\n",
+    "                                    found_lines.append(line.strip())\r\n",
+    "\r\n",
+    "            #if it is a manifest file\r\n",
+    "            if('.xml' in file_name and 'anifest' in file_name):\r\n",
+    "                \r\n",
+    "                #print file name\r\n",
+    "                if(verbose == True): print(file_name)\r\n",
+    "\r\n",
+    "                #open file and print line number and contents\r\n",
+    "                #I had to use latin encoding here or it would simply not work.\r\n",
+    "                with open(dirpath + \"\\\\\" + file_name, encoding=\"latin-1\") as myFile:\r\n",
+    "                    for num, line in enumerate(myFile, 1):\r\n",
+    "                        for i in perms_to_find:\r\n",
+    "                            if(i in line and ('<uses-permission android:name=' in line)\r\n",
+    "                                         or  ('<action android:name=\"android.app.action') in line):\r\n",
+    "                                #print the harmful line\r\n",
+    "                                if(line.strip() not in found_perms):\r\n",
+    "                                    if(verbose == True): print(num, \": \", line)\r\n",
     "                                    found_perms.append(line.strip())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {
-    "tags": []
-   },
+   ],
    "outputs": [],
-   "source": [
-    "#directory = \"C:\\\\Users\\\\vinic\\\\Desktop\\\\apktool\\\\simp\"\\\n",
-    "directory = \"C:\\\\Users\\\\vinic\\\\Desktop\\\\decoded apps\\\\wanna\"\n",
-    "\n",
-    "findFunctionsInDir(dir=directory, verbose=False)"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 26,
+   "source": [
+    "#directory = \"C:\\\\Users\\\\vinic\\\\Desktop\\\\apktool\\\\simp\"\\\r\n",
+    "directory = \"C:\\\\Users\\\\vinic\\\\Desktop\\\\output\"\r\n",
+    "\r\n",
+    "findFunctionsInDir(dir=directory, verbose=False)"
+   ],
+   "outputs": [],
    "metadata": {
     "tags": []
-   },
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "invoke-static {v3}, Landroid/support/v4/content/ContextCompatKitKat;->getExternalCacheDirs(Landroid/content/Context;)[Ljava/io/File;\ninvoke-static {v3}, Landroid/support/v4/content/ContextCompatFroyo;->getExternalCacheDir(Landroid/content/Context;)Ljava/io/File;\ninvoke-static {v4, v5}, Landroid/support/v4/content/ContextCompatKitKat;->getExternalFilesDirs(Landroid/content/Context;Ljava/lang/String;)[Ljava/io/File;\ninvoke-static {v4, v5}, Landroid/support/v4/content/ContextCompatFroyo;->getExternalFilesDir(Landroid/content/Context;Ljava/lang/String;)Ljava/io/File;\ninvoke-virtual {v1}, Landroid/content/Context;->getExternalCacheDir()Ljava/io/File;\ninvoke-virtual {v2, v3}, Landroid/content/Context;->getExternalFilesDir(Ljava/lang/String;)Ljava/io/File;\ninvoke-virtual {v1}, Landroid/content/Context;->getExternalCacheDirs()[Ljava/io/File;\ninvoke-virtual {v2, v3}, Landroid/content/Context;->getExternalFilesDirs(Ljava/lang/String;)[Ljava/io/File;\ninvoke-virtual {v10}, Landroid/content/Context;->getFilesDir()Ljava/io/File;\ninvoke-virtual {v10}, Landroid/content/Context;->getCacheDir()Ljava/io/File;\ninvoke-virtual {v1}, Landroid/support/v4/hardware/fingerprint/FingerprintManagerCompatApi23$CryptoObject;->getCipher()Ljavax/crypto/Cipher;\ninvoke-virtual {v3}, Landroid/support/v4/hardware/fingerprint/FingerprintManagerCompatApi23$CryptoObject;->getCipher()Ljavax/crypto/Cipher;\ninvoke-direct {v2, v3}, Landroid/support/v4/hardware/fingerprint/FingerprintManagerCompat$CryptoObject;-><init>(Ljavax/crypto/Cipher;)V\ninvoke-virtual {v1}, Landroid/support/v4/hardware/fingerprint/FingerprintManagerCompat$CryptoObject;->getCipher()Ljavax/crypto/Cipher;\ninvoke-virtual {v3}, Landroid/support/v4/hardware/fingerprint/FingerprintManagerCompat$CryptoObject;->getCipher()Ljavax/crypto/Cipher;\ninvoke-direct {v2, v3}, Landroid/support/v4/hardware/fingerprint/FingerprintManagerCompatApi23$CryptoObject;-><init>(Ljavax/crypto/Cipher;)V\ninvoke-virtual {v1}, Landroid/hardware/fingerprint/FingerprintManager$CryptoObject;->getCipher()Ljavax/crypto/Cipher;\ninvoke-virtual {v3}, Landroid/hardware/fingerprint/FingerprintManager$CryptoObject;->getCipher()Ljavax/crypto/Cipher;\ninvoke-direct {v2, v3}, Landroid/hardware/fingerprint/FingerprintManager$CryptoObject;-><init>(Ljavax/crypto/Cipher;)V\ninvoke-direct {v2, v3}, Ljava/io/FileInputStream;-><init>(Ljava/io/File;)V\ninvoke-virtual {v8}, Landroid/support/v4/util/AtomicFile;->openRead()Ljava/io/FileInputStream;\ninvoke-virtual {v8}, Ljava/io/FileInputStream;->available()I\ninvoke-virtual {v8, v9, v10, v11}, Ljava/io/FileInputStream;->read([BII)I\ninvoke-virtual {v8}, Ljava/io/FileInputStream;->close()V\ninvoke-virtual {v13, v14}, Landroid/content/Context;->openFileInput(Ljava/lang/String;)Ljava/io/FileInputStream;\ninvoke-virtual {v13}, Ljava/io/FileInputStream;->close()V\ninvoke-virtual {v6, v7, v8}, Lcom/android/tencent/zdevs/bah/MainActivity;->getSharedPreferences(Ljava/lang/String;I)Landroid/content/SharedPreferences;\ninvoke-virtual {v7, v8, v9}, Lcom/android/tencent/zdevs/bah/MainActivity;->getSharedPreferences(Ljava/lang/String;I)Landroid/content/SharedPreferences;\ninvoke-virtual {v5, v6, v7}, Lcom/android/tencent/zdevs/bah/MainActivity;->getSharedPreferences(Ljava/lang/String;I)Landroid/content/SharedPreferences;\ninvoke-virtual {v6, v7, v8}, Landroid/support/v4/app/FragmentActivity;->getSharedPreferences(Ljava/lang/String;I)Landroid/content/SharedPreferences;\ninvoke-virtual/range {v19 .. v21}, Landroid/support/v4/app/FragmentActivity;->getSharedPreferences(Ljava/lang/String;I)Landroid/content/SharedPreferences;\ninvoke-virtual/range {v19 .. v19}, Ljava/net/URL;->openConnection()Ljava/net/URLConnection;\ninvoke-virtual {v6, v7, v8}, Landroid/content/Context;->getSharedPreferences(Ljava/lang/String;I)Landroid/content/SharedPreferences;\ninvoke-direct/range {v22 .. v23}, Ljava/io/FileInputStream;-><init>(Ljava/io/File;)V\ninvoke-static/range {v21 .. v22}, Lcom/android/tencent/zdevs/bah/sss;->initAESCipher(Ljava/lang/String;I)Ljavax/crypto/Cipher;\ninvoke-direct/range {v22 .. v24}, Ljavax/crypto/CipherOutputStream;-><init>(Ljava/io/OutputStream;Ljavax/crypto/Cipher;)V\ninvoke-virtual/range {v21 .. v22}, Ljava/io/FileInputStream;->read([B)I\ninvoke-virtual/range {v21 .. v21}, Ljavax/crypto/CipherOutputStream;->close()V\ninvoke-virtual/range {v21 .. v21}, Ljava/io/FileInputStream;->close()V\ninvoke-virtual/range {v21 .. v24}, Ljavax/crypto/CipherOutputStream;->write([BII)V\ninvoke-direct/range {v21 .. v22}, Ljava/io/FileInputStream;-><init>(Ljava/io/File;)V\ninvoke-static/range {v20 .. v21}, Lcom/android/tencent/zdevs/bah/sss;->initAESCipher(Ljava/lang/String;I)Ljavax/crypto/Cipher;\ninvoke-direct/range {v21 .. v23}, Ljavax/crypto/CipherInputStream;-><init>(Ljava/io/InputStream;Ljavax/crypto/Cipher;)V\ninvoke-virtual/range {v20 .. v21}, Ljavax/crypto/CipherInputStream;->read([B)I\ninvoke-virtual/range {v20 .. v20}, Ljavax/crypto/CipherInputStream;->close()V\ninvoke-virtual/range {v20 .. v20}, Ljava/io/FileInputStream;->close()V\ninvoke-static {v7}, Ljavax/crypto/Cipher;->getInstance(Ljava/lang/String;)Ljavax/crypto/Cipher;\ninvoke-virtual {v7, v8, v9, v10}, Ljavax/crypto/Cipher;->init(ILjava/security/Key;Ljava/security/spec/AlgorithmParameterSpec;)V\n"
-     ]
-    }
-   ],
-   "source": [
-    "#pretty print the found lines\n",
-    "print('\\n'.join(found_lines))"
-   ]
+   }
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
+   "execution_count": 27,
+   "source": [
+    "#pretty print the found lines\r\n",
+    "print('\\n'.join(found_lines))"
+   ],
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "<uses-permission android:name=\"android.permission.SET_WALLPAPER\"/>\n<uses-permission android:name=\"android.permission.READ_PHONE_STATE\"/>\n<uses-permission android:name=\"android.permission.WRITE_EXTERNAL_STORAGE\"/>\n<uses-permission android:name=\"android.permission.READ_EXTERNAL_STORAGE\"/>\n"
+      "invoke-virtual {p0, v0, v1}, Landroid/content/Context;->getSharedPreferences(Ljava/lang/String;I)Landroid/content/SharedPreferences;\n",
+      "invoke-static {v1}, Landroid/telephony/SmsMessage;->createFromPdu([B)Landroid/telephony/SmsMessage;\n",
+      "invoke-virtual {v1}, Landroid/telephony/SmsMessage;->getDisplayOriginatingAddress()Ljava/lang/String;\n",
+      "invoke-virtual {v1}, Landroid/telephony/SmsMessage;->getMessageBody()Ljava/lang/String;\n",
+      "invoke-virtual {v0}, Landroid/telephony/TelephonyManager;->getDeviceId()Ljava/lang/String;\n",
+      "invoke-virtual {v0}, Landroid/telephony/TelephonyManager;->getSubscriberId()Ljava/lang/String;\n",
+      "invoke-virtual/range {v0 .. v5}, Landroid/telephony/SmsManager;->sendTextMessage(Ljava/lang/String;Ljava/lang/String;Ljava/lang/String;Landroid/app/PendingIntent;Landroid/app/PendingIntent;)V\n",
+      "invoke-virtual {v0}, Ljava/net/URL;->openConnection()Ljava/net/URLConnection;\n",
+      "invoke-static {}, Landroid/telephony/SmsManager;->getDefault()Landroid/telephony/SmsManager;\n",
+      "invoke-static {p0, p1, v0}, Lcom/azianames/foroneyhar/a/ozpoxuz523b2;->ttmhx7(Ljava/lang/String;Ljava/lang/String;Landroid/telephony/SmsManager;)V\n"
      ]
     }
    ],
+   "metadata": {
+    "tags": []
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
    "source": [
-    "#pretty print found permissions\n",
+    "#pretty print found permissions and actions\r\n",
     "print('\\n'.join(found_perms))"
-   ]
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "<uses-permission android:name=\"android.permission.READ_PHONE_STATE\"/>\n",
+      "<uses-permission android:name=\"android.permission.RECEIVE_BOOT_COMPLETED\"/>\n",
+      "<uses-permission android:name=\"android.permission.WRITE_EXTERNAL_STORAGE\"/>\n",
+      "<uses-permission android:name=\"android.permission.READ_CONTACTS\"/>\n",
+      "<uses-permission android:name=\"android.permission.CALL_PHONE\"/>\n",
+      "<uses-permission android:name=\"android.permission.SYSTEM_ALERT_WINDOW\"/>\n",
+      "<uses-permission android:name=\"android.permission.GET_TASKS\"/>\n",
+      "<uses-permission android:name=\"android.permission.READ_SMS\"/>\n",
+      "<uses-permission android:name=\"android.permission.SEND_SMS\"/>\n",
+      "<uses-permission android:name=\"android.permission.RECEIVE_SMS\"/>\n",
+      "<action android:name=\"android.app.action.ACTION_DEVICE_ADMIN_DISABLE_REQUESTED\"/>\n",
+      "<action android:name=\"android.app.action.DEVICE_ADMIN_ENABLED\"/>\n",
+      "<action android:name=\"android.app.action.DEVICE_ADMIN_DISABLED\"/>\n"
+     ]
+    }
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "#TODO: split 2 search functionalities\n",
-    "#TODO: Add a function counter\n",
-    "#TODO: add a GUI\n",
-    "#TODO: add a way to select path\n",
-    "#TODO: Increase the search list\n",
-    "#TODO: Print results in a better way\n",
+    "#TODO: split 2 search functionalities\r\n",
+    "#TODO: Add a function counter\r\n",
+    "#TODO: add a GUI\r\n",
+    "#TODO: add a way to select path\r\n",
+    "#TODO: Increase the search list\r\n",
+    "#TODO: Print results in a better way\r\n",
     "#TODO: output to a file."
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   }
  ],
  "metadata": {
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3.8.8 64-bit",
-   "metadata": {
-    "interpreter": {
-     "hash": "3a892253abbbfe71f9f1a8f36cde64481ba865a7ee207fc547136da267cc8dc2"
-    }
-   }
+   "display_name": "Python 3.8.10 64-bit (windows store)"
   },
   "language_info": {
    "codemirror_mode": {
@@ -176,7 +192,10 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8-final"
+   "version": "3.8.10"
+  },
+  "interpreter": {
+   "hash": "2697aec458097c8be2fda3c63faa1249bfca87c65c061e5ab1bc359a83cb0655"
   }
  },
  "nbformat": 4,
