created most of the script automation

--- a/objectNotebook.ipynb
+++ b/objectNotebook.ipynb
@@ -13,17 +13,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": null,
    "source": [
     "from os import walk\r\n",
-    "import pandas as pd"
+    "import pandas as pd\r\n",
+    "import os"
    ],
    "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": null,
    "source": [
     "#create empty lists\r\n",
     "methods_to_find = []\r\n",
@@ -41,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": null,
    "source": [
     "#Create class object to be used in the lists\r\n",
     "class obj:\r\n",
@@ -56,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": null,
    "source": [
     "#Initialize empty lists\r\n",
     "myList = []\r\n",
@@ -81,14 +82,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": null,
    "source": [
     "def findFunctionsInDir(dir, list=0, verbose = True):\r\n",
     "    #for each directory, and files\r\n",
     "    for dirpath, dirnames, files in walk(dir):\r\n",
     "\r\n",
     "        #skip the res folder, too many subfolders, slows.\r\n",
-    "        if('res' in dirpath): continue\r\n",
+    "        #if('res' in dirpath): continue\r\n",
     "\r\n",
     "        if(verbose == True): print(f'Found directory: {dirpath}')\r\n",
     "        for file_name in files:\r\n",
@@ -130,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": null,
    "source": [
     "#PC directory\r\n",
     "directory = \"C:\\\\Users\\\\Vin\\\\Desktop\\\\sample1\"\r\n",
@@ -146,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": null,
    "source": [
     "#Create empty dataframe\r\n",
     "df = pd.DataFrame(columns=fakeList)\r\n",
@@ -157,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": null,
    "source": [
     "#function saves to csv file?\r\n",
     "def saveToFile(df):\r\n",
@@ -169,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": null,
    "source": [
     "#initialize empty list for the counts only.\r\n",
     "listOfCount = []\r\n",
@@ -182,110 +183,12 @@
     "df.loc[len(df.index)] = listOfCount\r\n",
     "df"
    ],
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>READ_CALENDAR</th>\n",
-       "      <th>WRITE_CALENDAR</th>\n",
-       "      <th>CAMERA</th>\n",
-       "      <th>READ_CONTACTS</th>\n",
-       "      <th>WRITE_CONTACTS</th>\n",
-       "      <th>GET_ACCOUNTS</th>\n",
-       "      <th>ACCESS_FINE_LOCATION</th>\n",
-       "      <th>ACCESS_COARSE_LOCATION</th>\n",
-       "      <th>RECORD_AUDIO</th>\n",
-       "      <th>READ_PHONE_STATE</th>\n",
-       "      <th>...</th>\n",
-       "      <th>getExternalCacheDir</th>\n",
-       "      <th>shareIntent</th>\n",
-       "      <th>readPhoneNumber</th>\n",
-       "      <th>FileInputStream</th>\n",
-       "      <th>getSharedPreferences</th>\n",
-       "      <th>telephony</th>\n",
-       "      <th>getMessageBody</th>\n",
-       "      <th>getDisplayOriginatingAddress</th>\n",
-       "      <th>wallpaper</th>\n",
-       "      <th>crypto</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>...</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>19</td>\n",
-       "      <td>8</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>37</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1 rows × 61 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  READ_CALENDAR WRITE_CALENDAR CAMERA READ_CONTACTS WRITE_CONTACTS  \\\n",
-       "0             0              0      0             0              0   \n",
-       "\n",
-       "  GET_ACCOUNTS ACCESS_FINE_LOCATION ACCESS_COARSE_LOCATION RECORD_AUDIO  \\\n",
-       "0            0                    0                      0            0   \n",
-       "\n",
-       "  READ_PHONE_STATE  ... getExternalCacheDir shareIntent readPhoneNumber  \\\n",
-       "0                1  ...                   4           0               0   \n",
-       "\n",
-       "  FileInputStream getSharedPreferences telephony getMessageBody  \\\n",
-       "0              19                    8         0              0   \n",
-       "\n",
-       "  getDisplayOriginatingAddress wallpaper crypto  \n",
-       "0                            0         0     37  \n",
-       "\n",
-       "[1 rows x 61 columns]"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 85
-    }
-   ],
+   "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": null,
    "source": [
     "#Call Save function to the csv\r\n",
     "saveToFile(df)"
@@ -295,12 +198,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": null,
    "source": [
     "#This line will clear the DF (call if needed)\r\n",
     "df = df.iloc[0:0]"
    ],
    "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "source": [
+    "# 1: Traverse all APKs in the folder:\r\n",
+    "dir = 'C:\\\\Users\\\\Vin\\\\Desktop\\\\python-ransomware-analyzer\\\\ransomware'\r\n",
+    "\r\n",
+    "for filename in os.listdir(dir):\r\n",
+    "    if filename.endswith('.apk'):\r\n",
+    "        print(\"analyzing: \"+ filename)\r\n",
+    "\r\n",
+    "        foldername = 'out_' + filename\r\n",
+    "        #set output directory\r\n",
+    "        var1 = r'C:\\Users\\Vin\\Desktop\\python-ransomware-analyzer\\apktool\\\\' + foldername\r\n",
+    "\r\n",
+    "        #set input apk\r\n",
+    "        var2 = r'C:\\Users\\Vin\\Desktop\\python-ransomware-analyzer\\ransomware\\\\' + filename\r\n",
+    "\r\n",
+    "        #convert python vars to batch vars\r\n",
+    "        os.putenv(\"VAR1\", var1)\r\n",
+    "        os.putenv(\"VAR2\", var2)\r\n",
+    "\r\n",
+    "        #call the run.bat for the apktool\r\n",
+    "        os.system(\"run.bat\")\r\n",
+    "        "
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "analyzing: 0b31b97d9ce3b891c7d5b145693e63fe.apk\n",
+      "analyzing: 1ad669a7c148352dbb5389a8238e8fa0.apk\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "source": [
+    "import os\r\n",
+    "\r\n",
+    "#set output directory\r\n",
+    "var1 = r\"C:\\Users\\Vin\\Desktop\\python-ransomware-analyzer\\apktool\\out\"\r\n",
+    "\r\n",
+    "#set input apk\r\n",
+    "var2 = r\"C:\\Users\\Vin\\Desktop\\python-ransomware-analyzer\\ransomware\\0b31b97d9ce3b891c7d5b145693e63fe.apk\"\r\n",
+    "\r\n",
+    "#convert python vars to batch vars\r\n",
+    "os.putenv(\"VAR1\", var1)\r\n",
+    "os.putenv(\"VAR2\", var2)\r\n",
+    "\r\n",
+    "#call the run.bat for the apktool\r\n",
+    "os.system(\"run.bat\")"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 24
+    }
+   ],
    "metadata": {}
   }
  ],
